<resources>
    <string name="app_name">Chapter UI</string>
    <string name="goal">CAN YOU WALK 1000 STEPS?</string>
    <string name="speed">SPEED</string>
    <string name="kmh">KM/H</string>
    <string name="calories">CALORIES</string>
    <string name="steps">STEPS</string>
    <string name="distance">DISTANCE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
