<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".33"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/pattern">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:layout_marginBottom="20dp"
                android:textSize="20dp"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"/>

            <ProgressBar
                android:id="@+id/stepBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_height="10dp"
                android:layout_width="match_parent"
                android:maxHeight="10dip"
                android:minHeight="10dip"
                android:progress="50"
                android:indeterminate="false"
                android:progressDrawable="@drawable/progress"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".3"
                android:textSize="16dp"
                android:textColor="@color/primaryTextColor"
                android:gravity="center"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/ic_network_check_black_24dp"
                android:drawableTint="@color/primaryTextColor"
                android:text="@string/speed" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="50dp"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:layout_weight=".25"
                android:text="12.34"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".45"
                android:gravity="center"
                android:textColor="@color/primaryTextColor"
                android:text="@string/kmh" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".66"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">


            <TextView
                android:id="@+id/calories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:textSize="50dp"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:gravity="center"
                android:text="50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/calories"
                android:textColor="@color/primaryTextColor"
                android:drawableTint="@color/primaryTextColor"
                android:drawableLeft="@drawable/ic_whatshot_black_24dp"
                android:layout_weight=".66"
                android:gravity="center"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:textSize="50dp"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:gravity="center"
                android:text="50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/steps"
                android:textColor="@color/primaryTextColor"
                android:drawableTint="@color/primaryTextColor"
                android:drawableLeft="@drawable/ic_directions_walk_black_24dp"
                android:layout_weight=".66"
                android:gravity="center"
                android:padding="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/colorPrimaryDark">


            <TextView
                android:id="@+id/distance"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:textSize="50dp"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                android:gravity="center"
                android:text="50" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/distance"
                android:textColor="@color/primaryTextColor"
                android:drawableTint="@color/primaryTextColor"
                android:drawableLeft="@drawable/ic_map_black_24dp"
                android:layout_weight=".66"
                android:gravity="center"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
